# fiber-todo-api/models/task.go
@@ -5,3 +5,7 @@ type Task struct {
 	Title string `json:"title"`
 	Done  bool   `json:"done"`
 }
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
