# fiber-todo-api/routes/task_route.go
@@ -7,7 +7,11 @@ import (
 )
 
 func SetupTaskRoutes(app *fiber.App) {
-	task := app.Group("/todos")
+	// task := app.Group("/todos")
+	task:= app.Group("/tasks")
 	task.Get("/", handlers.GetAllTasks)
 	task.Post("/", handlers.CreateTask)
+	task.Get("/:id", handlers.GetTaskByID)
+	task.Delete("/:id", handlers.DeleteTaskByID)
+	task.Put("/:id", handlers.UpdateTaskByID)
 }
